--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,9 +8,24 @@
 
 
 {  
-name:"DASS-631 เม อิซึกะอิจิ",
-image:"https://fourhoi.com/dass-631/cover-t.jpg",
-url:"https://surrit.com/36baae1f-ab75-4c0e-94ac-ca7eb1e8d8d1/720p/video.m3u8",
+name:"WAAA-528 เม อิซึกะอิจิ",
+image:"https://fourhoi.com/waaa-528/cover-n.jpg",
+url:"https://surrit.com/4a8c167e-c80b-444c-94af-61d3968c5a6d/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"DASS-648 เม อิซึกะอิจิ",
+image:"https://fourhoi.com/dass-648/cover-n.jpg",
+url:"https://surrit.com/76d62d8e-7121-4a8f-a8c8-682d2e06c031/720p/video.m3u8",
 "referer": "https://missav.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
