--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,9 +1,9 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี <อัพเดท:21.04.2568:12.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:31.05.2568:12.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
-"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:30.04.2568:12.00>]",
+"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:31.05.2568:12.00>]",
 
 "groups": [
 
@@ -26,6 +26,16 @@
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/leam.png",
 "imageScale": "fitStart",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter%20Moviees.html",
+"import": "true"
+},
+
+
+ {
+"name": "KhunKamMee Movie",
+"author": "Nexter",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/Kme-m2.png",
+"imageScale": "fitStart",
+"url": "https://github.com/Tonnexter/Tonnexter/raw/refs/heads/KhunKamMee/KhunKamMee-Movie.m3u",
 "import": "true"
 },
 
