--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -34,7 +34,7 @@
 "name": "KhunKamMee Movie",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/Kme-m1.png",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://github.com/Tonnexter/Tonnexter/raw/refs/heads/KhunKamMee/KhunKamMee-Movie.m3u",
 "import": "true"
 },
