--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,9 +1,9 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี <อัพเดท:30.05.2568:12.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:31.05.2568:12.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
-"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:30.05.2568:12.00>]",
+"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:31.05.2568:12.00>]",
 
 "groups": [
 
@@ -31,7 +31,7 @@
 
 
  {
-"name": "KhunKamMee Movie",
+"name": "Nexter-KME-Movie",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/Kme-m1.png",
 "imageScale": "centerCrop",
