--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -31,7 +31,7 @@
 
 
  {
-"name": "Nexter-KME-Movie",
+"name": "Nexter-KamMee-Movie",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/Kme-m1.png",
 "imageScale": "centerCrop",
