--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,9 +1,9 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี <อัพเดท:01.06.2568:12.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:02.06.2568:12.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
-"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:01.06.2568:12.00>]",
+"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:02.06.2568:12.00>]",
 
 "groups": [
 
@@ -31,10 +31,10 @@
 
 
  {
-"name": "Nexter-KamMe-Movie",
+"name": "Movie <หนังบ้านคูณคำมี>",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/Kme-m1.png",
-"imageScale": "centerCrop",
+"imageScale": "fitStart",
 "url": "https://github.com/Tonnexter/Tonnexter/raw/refs/heads/KhunKamMee/KhunKamMee-Movie.m3u",
 "import": "true"
 },
