--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,9 +1,9 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี <อัพเดท:02.06.2568:12.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:03.06.2568:12.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
-"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:02.06.2568:12.00>]",
+"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:03.06.2568:12.00>]",
 
 "groups": [
 
@@ -31,9 +31,9 @@
 
 
  {
-"name": "Movie <หนังบ้านคูณคำมี>",
+"name": "Movies <หนังบ้านคูณคำมี>",
 "author": "Nexter",
-"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/Kme-m1.png",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/Kme-m2t.png",
 "imageScale": "fitStart",
 "url": "https://github.com/Tonnexter/Tonnexter/raw/refs/heads/KhunKamMee/KhunKamMee-Movie.m3u",
 "import": "true"
