--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,9 +1,9 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี <อัพเดท:06.06.2568:12.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:05.06.2568:12.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
-"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:06.06.2568:12.00>]",
+"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:05.06.2568:12.00>]",
 
 "groups": [
 
@@ -24,7 +24,7 @@
 "name": "Movie <โรงหนังของแล้ม>",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/leam1.png",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter%20Moviees.html",
 "import": "true"
 },
