--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,6 +8,21 @@
 
 
 {  
+name:"JUQ-241 YUna",
+image:"https://fourhoi.com/juq-241-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/92c3ca23-3895-4dd1-995a-daf37c574510/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
 name:"JUQ-309 YUna",
 image:"https://fourhoi.com/juq-309-uncensored-leak/cover-n.jpg",
 url:"https://surrit.com/161e4052-3054-44fe-b92d-4d261908bf10/720p/video.m3u8",
