--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,9 +8,51 @@
 
 
 {  
-name:"PRED-520 Karen Yuzuriha",
-image:"https://fourhoi.com/pred-520/cover-n.jpg",
-url:"https://surrit.com/3ab5938e-4f7a-430c-9973-5ac63447891b/1280x720/video.m3u8",
+name:"PRED-680 Karen Yuzuriha",
+image:"https://fourhoi.com/pred-680-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/0bdba58e-a8ee-453e-8c95-55fae97d5c7a/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"PRED-680 Karen Yuzuriha",
+image:"https://fourhoi.com/pred-680-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/0bdba58e-a8ee-453e-8c95-55fae97d5c7a/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"PRED-694 Karen Yuzuriha",
+image:"https://fourhoi.com/pred-694-chinese-subtitle/cover-n.jpg",
+url:"https://surrit.com/62295ced-4e74-4f7c-9182-d1988e565bd4/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+{  
+name:"PRED-763 Karen Yuzuriha",
+image:"https://fourhoi.com/pred-763/cover-n.jpg",
+url:"https://surrit.com/80ad339e-2a36-4d07-bf33-b826a55b8447/1080p/video.m3u8",
 "referer": "https://missav.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
@@ -1287,21 +1329,6 @@ url:"https://surrit.com/f0c66368-ef08-462c-8330-c64d6af198e7/720p/video.m3u8",
 name:"SSIS-260 Miru",
 image:"https://fourhoi.com/ssis-260-english-subtitle/cover-n.jpg",
 url:"https://surrit.com/3887cfc1-5054-430d-b9d6-1cd74c79866e/720p/video.m3u8",
-"referer": "https://missav.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
-
-
-
-
-
-
-
-{  
-name:"PRED-763 Karen Kaede",
-image:"https://fourhoi.com/pred-763/cover-n.jpg",
-url:"https://surrit.com/80ad339e-2a36-4d07-bf33-b826a55b8447/1080p/video.m3u8",
 "referer": "https://missav.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
